--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ baseURL = "http://example.org/"
 languageCode = "tr-TR"
 title = "Emre'nin Blogu"
 enableRobotsTXT = true
-paginate = 10
+pagination.pagerSize = 10
 
 [params]
   author = "Emre"
