Add hugo-theme-terminal (submodule) and set theme in config

--- a/config.toml
+++ b/config.toml
@@ -4,5 +4,7 @@ title = "Emre'nin Blogu"
 enableRobotsTXT = true
 pagination.pagerSize = 10
 
+theme = "hugo-theme-terminal"
+
 [params]
   author = "Emre"
